--- a/_posts/2019-5-10-DL-Intro-5.md
+++ b/_posts/2019-5-10-DL-Intro-5.md
@@ -16,7 +16,7 @@ tags:
 > <i class="fas fa-book-open" style="padding: 0 2px 0 0;"></i>参考: ゼロから〜の第7章: P205〜P238
 
 <div class="link_box">
-    <span class="box-title">「ゼロからKeras」シリーズリンク</span>
+    <span class="box-title">シリーズリンク</span>
     <p>第一弾：<i class="fas fa-link" style="padding: 0 2px 0 0;"></i><a href="https://gucci-j.github.io/DL-Intro-1/">パーセプトロン編</a></p>
     <p>第二弾：<i class="fas fa-link" style="padding: 0 2px 0 0;"></i><a href="https://gucci-j.github.io/DL-Intro-2/">3層ニューラルネットワーク & 手書き数字認識編</a></p>  
     <p>第三弾：<i class="fas fa-link" style="padding: 0 2px 0 0;"></i><a href="https://gucci-j.github.io/DL-Intro-3/">ニューラルネットワークの学習編</a></p>
