Add a prev/next bar

--- a/_posts/2019-4-13-DL-Intro-1.md
+++ b/_posts/2019-4-13-DL-Intro-1.md
@@ -71,7 +71,7 @@ pip install keras
 `sequential.py`に以下のソースを順に書いていきましょう。
 
 #### 3.1.1 レイヤー + NumPyを読み込む
-```
+```python
 from keras.models import Sequential
 from keras.layers import Dense
 
@@ -79,12 +79,12 @@ import numpy as np
 ```
 
 #### 3.1.2 `model`にSepuentialモデルを定義する
-```
+```python
 model = Sequential()
 ```
 
 #### 3.1.3 `model`にDense層（全結合層）を追加する  
-```
+```python
 model.add(Dense(input_dim=2, units=1))
 ```
 
@@ -100,7 +100,7 @@ model.add(Dense(input_dim=2, units=1))
 
 * 重みとバイアスの初期設定には、`model.set_weights()`を使用します。  
 引数は重みの入ったリストです。
-```
+```python
 model.set_weights([np.array([[0.5], [0.5]]), np.array([-0.7])])
 ```
 ><i class="fas fa-book-open" style="padding: 0 2px 0 0;"></i>参照: ゼロから〜のP27  
@@ -109,7 +109,7 @@ model.set_weights([np.array([[0.5], [0.5]]), np.array([-0.7])])
 * モデルのテストは`predict`メソッドで行えます。  
 `predict`の返り値は、入力データの予測結果のリストになっています。  
 
-```
+```python
 X = np.array([[0,0], [0,1], [1,0], [1,1]])
 Y = np.array([[0], [0], [0], [1]])
 
@@ -128,7 +128,7 @@ Output:
 ```
 
 * これではわかりにくいので、マイナスのものは`False`で、プラスのものは`True`に置き換えます。
-```
+```python
 Y_[Y_ <= 0] = False
 Y_[Y_ > 0] = True
 print(Y_)
@@ -155,7 +155,7 @@ Results: [[ True]
 `functional.py`に以下のソースを順に書いていきましょう。
 
 #### 3.2.1 レイヤー + NumPyを読み込む
-```
+```python
 from keras import Model
 from keras.layers import Input, Dense
 
@@ -166,14 +166,14 @@ import numpy as np
 Functional APIでは、入力層を追加で定義する必要があります。  
 
 Dense部分のイメージとしては、Denseレイヤーのインスタンスを生成し、その入力として、テンソル：_inputを与えるという感じです。出力のテンソルは_outputとなります。
-```
+```python
 _input = Input(shape=(2, ))
 _output = Dense(units=1)(_input)
 ```
 
 #### 3.2.3 モデルを定義する  
 以下のように、Functional APIでは、モデルを定義する際に入力と出力のテンソルを別々に保持しておく必要があります！
-```
+```python
 model = Model(inputs=_input, outputs=_output)
 ```
 ><i class="fas fa-link" style="padding: 0 2px 0 0;"></i>参考: [https://keras.io/ja/getting-started/functional-api-guide/](https://keras.io/ja/getting-started/functional-api-guide/)  
