--- a/_posts/2019-4-26-DL-Intro-3.md
+++ b/_posts/2019-4-26-DL-Intro-3.md
@@ -60,7 +60,7 @@ tags:
 
 * モデルのパラメータ等は全てゼロから〜のP117〜122に基づいています。
 
-```
+```python
 from keras import Model
 from keras.layers import Input, Dense
 
@@ -102,7 +102,7 @@ _________________________________________________________________
     * one-hotベクトル化は、`to_categorical`を用いることで行えます。   
     引数は変換元リストとクラス数です。戻り値は変換後のリストです。
 
-```
+```python
 # データを読み込む
 from keras.datasets import mnist
 from keras.utils import to_categorical
@@ -144,7 +144,7 @@ y_train[0]: [0. 0. 0. 0. 0. 1. 0. 0. 0. 0.]
 * **評価関数**の設定も行います。  
 ゼロから〜のP121では、認識精度を評価関数としているので、`compile`メソッドの引数: `metrics`に`['accuracy']`を指定します。  
 
-```
+```python
 from keras.optimizers import SGD
 model.compile(optimizer=SGD(lr=0.1), loss='categorical_crossentropy', metrics=['accuracy'])
 ```
@@ -179,7 +179,7 @@ model.compile(optimizer=SGD(lr=0.1), loss='categorical_crossentropy', metrics=['
 
 
 
-```
+```python
 epochs = 17
 _results = model.fit(x=x_train, y=y_train, batch_size=100, epochs=epochs, verbose=1, validation_data=(x_test, y_test))
 ```
@@ -232,7 +232,7 @@ pip install matplotlib
 `fit`メソッドの戻り値は、`History`オブジェクトであると前章で紹介しました。  
 実験結果を可視化するためにも、`History`オブジェクトの中身を確認しておきましょう。
 
-```
+```python
 print(f'Keys: {_results.history.keys()}')
 ```
 
@@ -250,7 +250,7 @@ Keys: dict_keys(['val_loss', 'val_acc', 'loss', 'acc'])
 一連のソースコードを下記に示します。  
 なお、Matplotlibの詳しい使い方については、[公式チュートリアル](https://matplotlib.org/tutorials/index.html)をご覧ください。
 
-```
+```python
 import matplotlib.pyplot as plt
 
 loss = _results.history['loss']
@@ -280,7 +280,7 @@ Output:
 プロットの流れは、損失関数の時とほとんど同一のため、説明は割愛します。  
 以下にソースコードを貼るので、各自試してみてください。
 
-```
+```python
 plt.clf()
 acc = _results.history['acc']
 val_acc = _results.history['val_acc']
