--- a/_posts/2019-4-26-DL-Intro-3.md
+++ b/_posts/2019-4-26-DL-Intro-3.md
@@ -24,6 +24,7 @@ tags:
     <p>第五弾：<i class="fas fa-link" style="padding: 0 2px 0 0;"></i><a href="https://gucci-j.github.io/DL-Intro-5/">畳み込みニューラルネットワーク編</a></p>
 </div>
 
+<div class="inside-ads">
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle"
      style="display:block; text-align:center;"
@@ -34,6 +35,7 @@ tags:
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+</div>
 
 ## 1. プロジェクトの作成
 
@@ -196,6 +198,7 @@ Epoch 17/17
 60000/60000 [==============================] - 2s 27us/step - loss: 0.1771 - acc: 0.9497
 ```
 
+<div class="inside-ads">
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- 記事内広告2 -->
 <ins class="adsbygoogle"
@@ -207,6 +210,7 @@ Epoch 17/17
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+</div>
 
 ## 4. 学習結果の表示
 
