--- a/_posts/2019-5-10-DL-Intro-5.md
+++ b/_posts/2019-5-10-DL-Intro-5.md
@@ -24,6 +24,7 @@ tags:
     <p>第五弾：<i class="fas fa-link" style="padding: 0 2px 0 0;"></i><a href="https://gucci-j.github.io/DL-Intro-5/">畳み込みニューラルネットワーク編</a></p>
 </div>
 
+<div class="inside-ads">
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle"
      style="display:block; text-align:center;"
@@ -34,6 +35,7 @@ tags:
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+</div>
 
 ## 1. CIFAR10 データセット
 今回取り組むタスクは、CIFAR10と呼ばれる画像データセットをCNNで分類することです。
@@ -357,6 +359,7 @@ def combine_images(images):
 
 <br />
 
+<div class="inside-ads">
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- 記事内広告2 -->
 <ins class="adsbygoogle"
@@ -368,6 +371,7 @@ def combine_images(images):
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+</div>
 
 <br />
 
