--- a/_posts/2019-5-3-DL-Intro-4.md
+++ b/_posts/2019-5-3-DL-Intro-4.md
@@ -24,6 +24,7 @@ tags:
     <p>第五弾：<i class="fas fa-link" style="padding: 0 2px 0 0;"></i><a href="https://gucci-j.github.io/DL-Intro-5/">畳み込みニューラルネットワーク編</a></p>
 </div>
 
+<div class="inside-ads">
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle"
      style="display:block; text-align:center;"
@@ -34,6 +35,7 @@ tags:
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+</div>
 
 ## 1. 最適化アルゴリズム
 
@@ -125,7 +127,7 @@ Output:
 ><i class="fas fa-book-open" style="padding: 0 2px 0 0;"></i>参考: ゼロから〜のP184〜P186  
 <i class="fas fa-link" style="padding: 0 2px 0 0;"></i>参照: [（GitHub: compare_initializer.py）](https://github.com/gucci-j/intro-deep-learning-keras/tree/master/chapter6)
 
-
+<div class="inside-ads">
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- 記事内広告2 -->
 <ins class="adsbygoogle"
@@ -137,6 +139,7 @@ Output:
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+</div>
 
 ## 3. 正規化・正則化
 
