Separate style sheets & adjust the layout

--- a/_posts/2019-4-13-DL-Intro-1.md
+++ b/_posts/2019-4-13-DL-Intro-1.md
@@ -3,6 +3,7 @@ layout: post
 title: ゼロから作るDeep Learningとともに学ぶフレームワーク（パーセプトロン編）
 description: 「ゼロから作るDeep Learning」とともに深層学習フレームワークを学ぶプロジェクト第一弾として、Kerasの環境整備とパーセプトロンの実装を行います。
 lang: ja_JP
+custom_css: post
 tags:
 - 「ゼロからKeras」シリーズ
 ---
