--- a/_posts/2019-4-19-DL-Intro-2.md
+++ b/_posts/2019-4-19-DL-Intro-2.md
@@ -3,6 +3,7 @@ layout: post
 title: ゼロから作るDeep Learningとともに学ぶフレームワーク（3層ニューラルネットワーク ＆ 手書き数字認識編）
 description: 「ゼロから作るDeep Learning」とともに深層学習フレームワークを学ぶプロジェクト第二弾として、Kerasで3層ニューラルネットワークの実装と手書き数字認識に取り組みます。
 lang: ja_JP
+custom_css: post
 tags:
 - 「ゼロからKeras」シリーズ
 ---
