--- a/_posts/2019-5-10-DL-Intro-5.md
+++ b/_posts/2019-5-10-DL-Intro-5.md
@@ -4,6 +4,7 @@ title: ゼロから作るDeep Learningとともに学ぶフレームワーク（
 description: 「ゼロから作るDeep Learning」とともに深層学習フレームワークを学ぶプロジェクト第五弾として、畳み込みニューラルネットワークをKerasで実装し、CIFAR10の分類実験に取り組みます。
 image: /resources/2019-05-10/model_diagram.png
 lang: ja_JP
+custom_css: post
 tags:
 - 「ゼロからKeras」シリーズ
 ---
