--- a/_posts/2019-5-3-DL-Intro-4.md
+++ b/_posts/2019-5-3-DL-Intro-4.md
@@ -3,6 +3,7 @@ layout: post
 title: ゼロから作るDeep Learningとともに学ぶフレームワーク（学習テクニック編）
 description: 「ゼロから作るDeep Learning」とともに深層学習フレームワークを学ぶプロジェクト第四弾として、深層学習において重要な学習テクニックをKerasで実際に使ってみることで、それらの効果を体験します。
 lang: ja_JP
+custom_css: post
 tags:
 - 「ゼロからKeras」シリーズ
 ---
