--- a/_posts/2019-5-10-DL-Intro-5.md
+++ b/_posts/2019-5-10-DL-Intro-5.md
@@ -25,20 +25,16 @@ tags:
     <p>第五弾：<i class="fas fa-link" style="padding: 0 2px 0 0;"></i><a href="https://gucci-j.github.io/DL-Intro-5/">畳み込みニューラルネットワーク編</a></p>
 </div>
 
-<!--
-<div class="inside-ads">
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle"
-     style="display:block; text-align:center;"
-     data-ad-layout="in-article"
-     data-ad-format="fluid"
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle inside_ad"
+     style="display:block"
      data-ad-client="ca-pub-1838422896597988"
-     data-ad-slot="7676908062"></ins>
+     data-ad-slot="1400355899"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-</div>
--->
 
 ## 1. CIFAR10 データセット
 今回取り組むタスクは、CIFAR10と呼ばれる画像データセットをCNNで分類することです。
