--- a/_posts/2019-5-10-DL-Intro-5.md
+++ b/_posts/2019-5-10-DL-Intro-5.md
@@ -263,6 +263,15 @@ model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accur
 _results = model.fit(x=x_train, y=y_train, batch_size=100, epochs=20, verbose=1, validation_data=(x_test, y_test))
 ```
 
+<div class="inner_ads">
+    <div class="left_ad_in">
+        <a href="//af.moshimo.com/af/c/click?a_id=1502939&p_id=1555&pc_id=2816&pl_id=22749&guid=ON" target="_blank" rel="nofollow"><img src="//image.moshimo.com/af-img/0866/000000022749.jpg" width="300" height="250" style="border:none;"></a><img src="//i.moshimo.com/af/i/impression?a_id=1502939&p_id=1555&pc_id=2816&pl_id=22749" width="1" height="1" style="border:none;">
+    </div> 
+    <div class="right_ad_in">
+        <a href="//af.moshimo.com/af/c/click?a_id=1502939&p_id=1555&pc_id=2816&pl_id=22750&guid=ON" target="_blank" rel="nofollow"><img src="//image.moshimo.com/af-img/0866/000000022750.jpg" width="300" height="250" style="border:none;"></a><img src="//i.moshimo.com/af/i/impression?a_id=1502939&p_id=1555&pc_id=2816&pl_id=22750" width="1" height="1" style="border:none;">
+    </div>
+</div>
+
 ## 3. 実験
 ### 3.1 １層畳み込みニューラルネットの学習結果
 上記で実装した`cnn.py`を動作させた結果、以下のような分類精度の推移となりました。
