--- a/_posts/2019-5-3-DL-Intro-4.md
+++ b/_posts/2019-5-3-DL-Intro-4.md
@@ -131,6 +131,15 @@ Output:
 ><i class="fas fa-link" style="padding: 0 2px 0 0;"></i>参考: [（Kerasにおける正則化の利用方法について）](https://keras.io/ja/regularizers/)
 
 
+<div class="inner_ads">
+    <div class="left_ad">
+        <a href="//af.moshimo.com/af/c/click?a_id=1502939&p_id=1555&pc_id=2816&pl_id=22749&guid=ON" target="_blank" rel="nofollow"><img src="//image.moshimo.com/af-img/0866/000000022749.jpg" width="300" height="250" style="border:none;"></a><img src="//i.moshimo.com/af/i/impression?a_id=1502939&p_id=1555&pc_id=2816&pl_id=22749" width="1" height="1" style="border:none;">
+    </div> 
+    <div class="right_ad">
+        <a href="//af.moshimo.com/af/c/click?a_id=1502939&p_id=1555&pc_id=2816&pl_id=22750&guid=ON" target="_blank" rel="nofollow"><img src="//image.moshimo.com/af-img/0866/000000022750.jpg" width="300" height="250" style="border:none;"></a><img src="//i.moshimo.com/af/i/impression?a_id=1502939&p_id=1555&pc_id=2816&pl_id=22750" width="1" height="1" style="border:none;">
+    </div>
+</div>
+
 ## 4. バッチ正規化
 
 バッチ正規化は、入力データを平均値が0で分散が1となる分布に変換する手法のことを指します。バッチ正規化を適用することで、モデルの収束を高速化できるほか、重みの初期化手法に対してかなり頑健になります。
