--- a/_posts/2019-4-26-DL-Intro-3.md
+++ b/_posts/2019-4-26-DL-Intro-3.md
@@ -146,10 +146,10 @@ model.compile(optimizer=SGD(lr=0.1), loss='categorical_crossentropy', metrics=['
 したがって、ゼロから〜の5章の部分は、フレームワーク使用時には実装する必要がありません。（自分でレイヤーを設計することがない限り。）
 
 <div class="inner_ads">
-    <div class="left_ad">
+    <div class="left_ad_in">
         <a href="//af.moshimo.com/af/c/click?a_id=1502939&p_id=1555&pc_id=2816&pl_id=22749&guid=ON" target="_blank" rel="nofollow"><img src="//image.moshimo.com/af-img/0866/000000022749.jpg" width="300" height="250" style="border:none;"></a><img src="//i.moshimo.com/af/i/impression?a_id=1502939&p_id=1555&pc_id=2816&pl_id=22749" width="1" height="1" style="border:none;">
     </div> 
-    <div class="right_ad">
+    <div class="right_ad_in">
         <a href="//af.moshimo.com/af/c/click?a_id=1502939&p_id=1555&pc_id=2816&pl_id=22750&guid=ON" target="_blank" rel="nofollow"><img src="//image.moshimo.com/af-img/0866/000000022750.jpg" width="300" height="250" style="border:none;"></a><img src="//i.moshimo.com/af/i/impression?a_id=1502939&p_id=1555&pc_id=2816&pl_id=22750" width="1" height="1" style="border:none;">
     </div>
 </div>
