Add codes for ads

--- a/_posts/2019-4-13-DL-Intro-1.md
+++ b/_posts/2019-4-13-DL-Intro-1.md
@@ -30,17 +30,20 @@ tags:
     <p>第五弾：<i class="fas fa-link" style="padding: 0 2px 0 0;"></i><a href="https://gucci-j.github.io/DL-Intro-5/">畳み込みニューラルネットワーク編</a></p>
 </div>
 
-<!-- START MoshimoAffiliateEasyLink -->
-<script type="text/javascript">
-(function(b,c,f,g,a,d,e){b.MoshimoAffiliateObject=a;
-b[a]=b[a]||function(){arguments.currentScript=c.currentScript
-||c.scripts[c.scripts.length-2];(b[a].q=b[a].q||[]).push(arguments)};
-c.getElementById(a)||(d=c.createElement(f),d.src=g,
-d.id=a,e=c.getElementsByTagName("body")[0],e.appendChild(d))})
-(window,document,"script","//dn.msmstatic.com/site/cardlink/bundle.js","msmaflink");
-msmaflink({"n":"ゼロから作るDeep Learning ―Pythonで学ぶディープラーニングの理論と実装","b":"","t":"","d":"https:\/\/images-fe.ssl-images-amazon.com","c_p":"\/images\/I","p":["\/512ru2i5gyL.jpg","\/51Z7TzDuljL.jpg","\/51Dzt-P86rL.jpg","\/51VfxOvKEwL.jpg","\/51dNlTr6a7L.jpg","\/51RfBXWcDAL.jpg","\/415IXnDy3IL.jpg","\/415VCPaFk1L.jpg","\/410OtMHeqkL.jpg","\/41F7PYraodL.jpg","\/41TFOjFQtaL.jpg","\/51SRdr-iBHL.jpg","\/51yxT9nEC4L.jpg","\/51q0zWV9NnL.jpg","\/51MDmgZZ2cL.jpg","\/51n9f4IpDZL.jpg","\/51erDZNc9tL.jpg","\/41qOS5gPctL.jpg","\/51wDA5ZuAeL.jpg","\/51Fg67TMeCL.jpg","\/51KCmWaOqFL.jpg","\/51e5o3xlSTL.jpg","\/51RF7CQIW1L.jpg","\/514m0GkYReL.jpg","\/516bqTekHoL.jpg","\/41colcboiNL.jpg","\/51IRqvCxzAL.jpg","\/51mFjvDorhL.jpg","\/51BQcHSo5QL.jpg","\/51THHJTIaTL.jpg","\/51PzJ4B%2BhtL.jpg","\/51CRA6FoSLL.jpg","\/41M5Qzg1yXL.jpg","\/51iMy2fgPkL.jpg","\/41xe6JIHELL.jpg","\/41HYfr%2Bv%2BKL.jpg","\/41gRFTsmr%2BL.jpg","\/51fD5k24M8L.jpg","\/518%2B8E-OZeL.jpg","\/41iyTyjjgdL.jpg","\/51L6s8Uo8aL.jpg","\/41xHQHIOQ2L.jpg","\/51ZWyzq1L3L.jpg","\/51oDwhT1gcL.jpg","\/51Zu5NuGq2L.jpg","\/512VUPnG69L.jpg","\/41Ufnm15s9L.jpg","\/41nALw08xcL.jpg","\/51uZB7hP-xL.jpg","\/41Qi%2BzskZHL.jpg","\/51p3s1TTn4L.jpg","\/413xgCPJnzL.jpg","\/51mc1fX%2B7xL.jpg","\/51GLiuSVtbL.jpg","\/419bmxhHV9L.jpg","\/5100WGZVi6L.jpg"],"u":{"u":"https:\/\/www.amazon.co.jp\/%E3%82%BC%E3%83%AD%E3%81%8B%E3%82%89%E4%BD%9C%E3%82%8BDeep-Learning-%E2%80%95Python%E3%81%A7%E5%AD%A6%E3%81%B6%E3%83%87%E3%82%A3%E3%83%BC%E3%83%97%E3%83%A9%E3%83%BC%E3%83%8B%E3%83%B3%E3%82%B0%E3%81%AE%E7%90%86%E8%AB%96%E3%81%A8%E5%AE%9F%E8%A3%85-%E6%96%8E%E8%97%A4-%E5%BA%B7%E6%AF%85\/dp\/4873117585","t":"amazon","r_v":""},"aid":{"amazon":"1430714","rakuten":"1430719","yahoo":"1430721"}});
-</script>
-<!-- MoshimoAffiliateEasyLink END -->
+<div class="crowdfunding_ad">
+    <div class="pc" style="text-align: center;">
+        <a href="https://anchor.fm/melancholy">
+            <img src="{{ site.baseurl }}/resources/ads/mefm_banner_large.png" alt="めらんこりーFM!"/>
+        </a>
+        <br />
+    </div>
+    <div class="sp" style="text-align: center;">
+        <a href="https://anchor.fm/melancholy">
+            <img src="{{ site.baseurl }}/resources/ads/mefm_banner_small.png" alt="めらんこりーFM!"/>
+        </a>
+        <br />
+    </div>
+</div>
 
 ## 1. Kerasのインストール
 (**注意**) 本プロジェクトでは、すでにPythonやNumPy等のインストールは終えているものとしてスタートします。  
