--- a/_posts/2019-4-19-DL-Intro-2.md
+++ b/_posts/2019-4-19-DL-Intro-2.md
@@ -181,6 +181,21 @@ Output:
     </div>
 </div>
 
+<div class="crowdfunding_ad">
+    <div class="pc" style="text-align: center;">
+        <a href="https://anchor.fm/melancholy">
+            <img src="{{ site.baseurl }}/resources/ads/mefm_banner_large.png" alt="めらんこりーFM!"/>
+        </a>
+        <br />
+    </div>
+    <div class="sp" style="text-align: center;">
+        <a href="https://anchor.fm/melancholy">
+            <img src="{{ site.baseurl }}/resources/ads/mefm_banner_small.png" alt="めらんこりーFM!"/>
+        </a>
+        <br />
+    </div>
+</div>
+
 ## 2. 手書き数字認識（MNIST）
 
 ここからは、今実装した3層ニューラルネットワークを活用して、手書き数字を実際に分類していきます。  
