--- a/_posts/2019-4-19-DL-Intro-2.md
+++ b/_posts/2019-4-19-DL-Intro-2.md
@@ -202,7 +202,7 @@ Output:
 
 ><i class="fas fa-book-open" style="padding: 0 2px 0 0;"></i>参考: ゼロから〜のP72〜81  
 
-## 2.1 MNISTデータセットの読み込み
+### 2.1 MNISTデータセットの読み込み
 Kerasでは、MNISTデータセットは簡単にダウンロード&呼び出しできるようになっています。
 
 `mnist_nn.py`を作成して、以下を入力し動作させてみてください。
@@ -256,7 +256,7 @@ Output:
 きちんと一次元配列に変換されていることが確認できました。  
 正規化されているかどうかは、配列の要素のうち一つを表示させて確認してみてください。  
 
-### 2.2 モデルの改良
+### 2.3 モデルの改良
 `three_nn.py`でMNISTを分類できるように、以下の2点を改良します。   
 改良したものは、`mnist_nn.py`に追記してください。 
 
@@ -307,7 +307,7 @@ Functional APIを用いたモデル定義では、前回紹介したように、
 
 したがって、中間のベクトルに関しては特段利用したいケースがない限りは、同一の変数を利用した方が、コードが煩雑にならないのでおすすめです。
 
-### 2.3 重みファイルの読み込み
+### 2.4 重みファイルの読み込み
 重みファイルは、ゼロから〜のものと同一のファイルを使用します。  
 * [公式レポジトリ](https://github.com/oreilly-japan/deep-learning-from-scratch/tree/master/ch03)から、`sample_weight.pkl`をダウンロードしてください。
 
@@ -332,7 +332,7 @@ model.set_weights(load_weight())
 
 ><i class="fas fa-link" style="padding: 0 2px 0 0;"></i>参考: [Kerasでモデルの保存/ロードを行う](https://keras.io/ja/getting-started/faq/#keras-model)
 
-### 2.4 テストする
+### 2.5 テストする
 それでは、ゼロから〜のP77と同様に実装したモデルをテストしていきましょう。  
 
 * `np.argmax`で軸(axis)指定をしていますが、これはリストが2次元配列以上のときに、「どの軸方向に対して演算を行うか」を指定するために活用します。  
